remove random from scrape code and download more reviews

--- a/src/notebooks/step_01_open_data.ipynb
+++ b/src/notebooks/step_01_open_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -71,112 +71,155 @@
        "      <th>Price</th>\n",
        "      <th>app_id</th>\n",
        "      <th>category</th>\n",
+       "      <th>userName</th>\n",
+       "      <th>userImage</th>\n",
+       "      <th>content</th>\n",
+       "      <th>score</th>\n",
+       "      <th>thumbsUpCount</th>\n",
+       "      <th>reviewCreatedVersion</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>\\nMARVEL Future Fight\\n</td>\n",
+       "      <th>955</th>\n",
+       "      <td>15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>\\nRed Ball 4\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2,759,302</td>\n",
-       "      <td>50.0 M</td>\n",
-       "      <td>4.39</td>\n",
-       "      <td>0.4%</td>\n",
-       "      <td>0.7%</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>com.netmarble.mherosgb</td>\n",
-       "      <td>GAME_ROLE_PLAYING</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>\\nAngry Birds Epic RPG\\n</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2,655,384</td>\n",
-       "      <td>10.0 M</td>\n",
-       "      <td>4.55</td>\n",
-       "      <td>0.0%</td>\n",
-       "      <td>0.0%</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>com.rovio.gold</td>\n",
-       "      <td>GAME_ROLE_PLAYING</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>\\nShadow Fight 3\\n</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2,527,699</td>\n",
-       "      <td>50.0 M</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1.5%</td>\n",
-       "      <td>2.8%</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>com.nekki.shadowfight3</td>\n",
-       "      <td>GAME_ROLE_PLAYING</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>\\nFlight Pilot Simulator 3D Free\\n</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2,460,471</td>\n",
+       "      <td>1,951,549</td>\n",
        "      <td>100.0 M</td>\n",
-       "      <td>4.31</td>\n",
-       "      <td>0.8%</td>\n",
-       "      <td>1.4%</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>1.8%</td>\n",
+       "      <td>3.0%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>com.fungames.flightpilot</td>\n",
-       "      <td>GAME_ROLE_PLAYING</td>\n",
+       "      <td>com.FDGEntertainment.redball4.gp</td>\n",
+       "      <td>GAME_ARCADE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>\\nAvakin Life - 3D Virtual World\\n</td>\n",
+       "      <th>956</th>\n",
+       "      <td>16</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>\\nAngry Birds Transformers\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2,415,258</td>\n",
+       "      <td>1,828,946</td>\n",
        "      <td>50.0 M</td>\n",
-       "      <td>4.32</td>\n",
-       "      <td>3.1%</td>\n",
-       "      <td>5.8%</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>0.4%</td>\n",
+       "      <td>0.6%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>com.lockwoodpublishing.avakinlife</td>\n",
-       "      <td>GAME_ROLE_PLAYING</td>\n",
+       "      <td>com.rovio.angrybirdstransformers</td>\n",
+       "      <td>GAME_ARCADE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>957</th>\n",
+       "      <td>17</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>\\nGlow Hockey\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,762,167</td>\n",
+       "      <td>100.0 M</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>0.3%</td>\n",
+       "      <td>0.4%</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>com.natenai.glowhockey</td>\n",
+       "      <td>GAME_ARCADE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958</th>\n",
+       "      <td>18</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>\\nAngry Birds Seasons\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,681,744</td>\n",
+       "      <td>100.0 M</td>\n",
+       "      <td>4.52</td>\n",
+       "      <td>0.0%</td>\n",
+       "      <td>0.0%</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>com.rovio.angrybirdsseasons</td>\n",
+       "      <td>GAME_ARCADE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>959</th>\n",
+       "      <td>19</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>\\nGeometry Dash Meltdown\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,672,188</td>\n",
+       "      <td>50.0 M</td>\n",
+       "      <td>4.53</td>\n",
+       "      <td>0.2%</td>\n",
+       "      <td>0.5%</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>com.robtopx.geometrydashmeltdown</td>\n",
+       "      <td>GAME_ARCADE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  rank                               title  icon ↓Total ratings  \\\n",
-       "0           0   1.0             \\nMARVEL Future Fight\\n   NaN      2,759,302   \n",
-       "1           1   2.0            \\nAngry Birds Epic RPG\\n   NaN      2,655,384   \n",
-       "2           2   3.0                  \\nShadow Fight 3\\n   NaN      2,527,699   \n",
-       "3           3   4.0  \\nFlight Pilot Simulator 3D Free\\n   NaN      2,460,471   \n",
-       "4           4   5.0  \\nAvakin Life - 3D Virtual World\\n   NaN      2,415,258   \n",
+       "     Unnamed: 0  rank                         title  icon ↓Total ratings  \\\n",
+       "955          15  16.0                \\nRed Ball 4\\n   NaN      1,951,549   \n",
+       "956          16  17.0  \\nAngry Birds Transformers\\n   NaN      1,828,946   \n",
+       "957          17  18.0               \\nGlow Hockey\\n   NaN      1,762,167   \n",
+       "958          18  19.0       \\nAngry Birds Seasons\\n   NaN      1,681,744   \n",
+       "959          19  20.0    \\nGeometry Dash Meltdown\\n   NaN      1,672,188   \n",
        "\n",
-       "  Installs  Average rating Growth (30 days) Growth (60 days) Price  \\\n",
-       "0   50.0 M            4.39             0.4%             0.7%  Free   \n",
-       "1   10.0 M            4.55             0.0%             0.0%  Free   \n",
-       "2   50.0 M            4.00             1.5%             2.8%  Free   \n",
-       "3  100.0 M            4.31             0.8%             1.4%  Free   \n",
-       "4   50.0 M            4.32             3.1%             5.8%  Free   \n",
+       "    Installs  Average rating Growth (30 days) Growth (60 days) Price  \\\n",
+       "955  100.0 M            4.40             1.8%             3.0%  Free   \n",
+       "956   50.0 M            4.60             0.4%             0.6%  Free   \n",
+       "957  100.0 M            4.23             0.3%             0.4%  Free   \n",
+       "958  100.0 M            4.52             0.0%             0.0%  Free   \n",
+       "959   50.0 M            4.53             0.2%             0.5%  Free   \n",
        "\n",
-       "                              app_id           category  \n",
-       "0             com.netmarble.mherosgb  GAME_ROLE_PLAYING  \n",
-       "1                     com.rovio.gold  GAME_ROLE_PLAYING  \n",
-       "2             com.nekki.shadowfight3  GAME_ROLE_PLAYING  \n",
-       "3           com.fungames.flightpilot  GAME_ROLE_PLAYING  \n",
-       "4  com.lockwoodpublishing.avakinlife  GAME_ROLE_PLAYING  "
+       "                               app_id     category userName userImage content  \\\n",
+       "955  com.FDGEntertainment.redball4.gp  GAME_ARCADE      NaN       NaN     NaN   \n",
+       "956  com.rovio.angrybirdstransformers  GAME_ARCADE      NaN       NaN     NaN   \n",
+       "957            com.natenai.glowhockey  GAME_ARCADE      NaN       NaN     NaN   \n",
+       "958       com.rovio.angrybirdsseasons  GAME_ARCADE      NaN       NaN     NaN   \n",
+       "959  com.robtopx.geometrydashmeltdown  GAME_ARCADE      NaN       NaN     NaN   \n",
+       "\n",
+       "     score  thumbsUpCount reviewCreatedVersion  \n",
+       "955    NaN            NaN                  NaN  \n",
+       "956    NaN            NaN                  NaN  \n",
+       "957    NaN            NaN                  NaN  \n",
+       "958    NaN            NaN                  NaN  \n",
+       "959    NaN            NaN                  NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,18 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select only the top 10 APPs for each category\n",
-    "df = data[data['rank'] < 11]\n",
-    "list_of_ids = df['app_id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +268,7 @@
        "(14000, 9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,6 +463,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>userName</th>\n",
+       "      <th>userImage</th>\n",
+       "      <th>content</th>\n",
+       "      <th>score</th>\n",
+       "      <th>thumbsUpCount</th>\n",
+       "      <th>reviewCreatedVersion</th>\n",
+       "      <th>at</th>\n",
+       "      <th>file_origin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13995</th>\n",
+       "      <td>95</td>\n",
+       "      <td>Celita Santos</td>\n",
+       "      <td>https://lh3.googleusercontent.com/-dqJLHv_A4pQ...</td>\n",
+       "      <td>O jogo é muito bom , mais eu acho que poderia ...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.12.0</td>\n",
+       "      <td>2019-12-28 13:09:53</td>\n",
+       "      <td>../../var/data/com.imangi.templerun/MOST_RELEV...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13996</th>\n",
+       "      <td>96</td>\n",
+       "      <td>Edivania Santos</td>\n",
+       "      <td>https://lh3.googleusercontent.com/-Y1Irx78dZeE...</td>\n",
+       "      <td>Odiei esse jogo é muito ruim o dinheiro que vo...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1397</td>\n",
+       "      <td>1.12.0</td>\n",
+       "      <td>2019-12-23 12:59:56</td>\n",
+       "      <td>../../var/data/com.imangi.templerun/MOST_RELEV...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13997</th>\n",
+       "      <td>97</td>\n",
+       "      <td>Eduarda Cassandra</td>\n",
+       "      <td>https://lh3.googleusercontent.com/a-/AOh14GiSm...</td>\n",
+       "      <td>É bom sim , só que , tem vezes que não pega a ...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.12.0</td>\n",
+       "      <td>2020-01-10 14:38:54</td>\n",
+       "      <td>../../var/data/com.imangi.templerun/MOST_RELEV...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13998</th>\n",
+       "      <td>98</td>\n",
+       "      <td>Adriana Motta</td>\n",
+       "      <td>https://lh3.googleusercontent.com/a-/AOh14Gjdy...</td>\n",
+       "      <td>Muito bom . Precisa de bastante concentração. ...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1.12.0</td>\n",
+       "      <td>2019-12-29 14:17:14</td>\n",
+       "      <td>../../var/data/com.imangi.templerun/MOST_RELEV...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13999</th>\n",
+       "      <td>99</td>\n",
+       "      <td>yLucKaSs Canal Segundario</td>\n",
+       "      <td>https://lh3.googleusercontent.com/-Hi68L8FpECU...</td>\n",
+       "      <td>Eu do um toque no celular e da ads</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.13.0</td>\n",
+       "      <td>2020-03-28 22:20:52</td>\n",
+       "      <td>../../var/data/com.imangi.templerun/MOST_RELEV...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0                   userName  \\\n",
+       "13995          95              Celita Santos   \n",
+       "13996          96            Edivania Santos   \n",
+       "13997          97          Eduarda Cassandra   \n",
+       "13998          98              Adriana Motta   \n",
+       "13999          99  yLucKaSs Canal Segundario   \n",
+       "\n",
+       "                                               userImage  \\\n",
+       "13995  https://lh3.googleusercontent.com/-dqJLHv_A4pQ...   \n",
+       "13996  https://lh3.googleusercontent.com/-Y1Irx78dZeE...   \n",
+       "13997  https://lh3.googleusercontent.com/a-/AOh14GiSm...   \n",
+       "13998  https://lh3.googleusercontent.com/a-/AOh14Gjdy...   \n",
+       "13999  https://lh3.googleusercontent.com/-Hi68L8FpECU...   \n",
+       "\n",
+       "                                                 content  score  \\\n",
+       "13995  O jogo é muito bom , mais eu acho que poderia ...      3   \n",
+       "13996  Odiei esse jogo é muito ruim o dinheiro que vo...      1   \n",
+       "13997  É bom sim , só que , tem vezes que não pega a ...      4   \n",
+       "13998  Muito bom . Precisa de bastante concentração. ...      5   \n",
+       "13999                 Eu do um toque no celular e da ads      1   \n",
+       "\n",
+       "       thumbsUpCount reviewCreatedVersion                   at  \\\n",
+       "13995             18               1.12.0  2019-12-28 13:09:53   \n",
+       "13996           1397               1.12.0  2019-12-23 12:59:56   \n",
+       "13997             11               1.12.0  2020-01-10 14:38:54   \n",
+       "13998             24               1.12.0  2019-12-29 14:17:14   \n",
+       "13999              0               1.13.0  2020-03-28 22:20:52   \n",
+       "\n",
+       "                                             file_origin  \n",
+       "13995  ../../var/data/com.imangi.templerun/MOST_RELEV...  \n",
+       "13996  ../../var/data/com.imangi.templerun/MOST_RELEV...  \n",
+       "13997  ../../var/data/com.imangi.templerun/MOST_RELEV...  \n",
+       "13998  ../../var/data/com.imangi.templerun/MOST_RELEV...  \n",
+       "13999  ../../var/data/com.imangi.templerun/MOST_RELEV...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://lh3.googleusercontent.com/-HRy8jfqskPk/AAAAAAAAAAI/AAAAAAAAAAA/AAKWJJO4P5BGD022DB7-QHF46QKS3TFqSw/photo.jpg'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['userImage'][100]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -453,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
