--- a/src/notebooks/step_02_processing_data.ipynb
+++ b/src/notebooks/step_02_processing_data.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,18 +64,18 @@
        "13997    é bom sim , só que , tem vezes que não pega a ...\n",
        "13998    muito bom . precisa de bastante concentração. ...\n",
        "13999                   eu do um toque no celular e da ads\n",
-       "Name: content, Length: 14000, dtype: object"
+       "Name: content_p, Length: 14000, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert to lowercase\n",
-    "df['content'] = df['content'].apply(lambda x: \" \".join(x.lower() for x in x.split()))\n",
-    "df['content']"
+    "df['content_p'] = df['content'].apply(lambda x: \" \".join(x.lower() for x in x.split()))\n",
+    "df['content_p']"
    ]
   },
   {
@@ -115,21 +115,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/henriquegomide/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remove Stopwords\n",
     "import nltk\n",
-    "nltk.download('stopwords')\n",
+    "# nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords\n",
     "stop = stopwords.words('portuguese')"
    ]
@@ -176,7 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spell check\n",
+    "from spellchecker import SpellChecker\n",
+    "spell = SpellChecker(language='pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It takes ages to run line below\n",
+    "# df['content'] = df['content'].apply(lambda x: \" \".join(spell.correction(x) for x in x.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +198,7 @@
        "Name: content, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,12 +219,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.iloc[:, 2:8].to_csv('/home/henriquegomide/github_repos/google-play-store-scraper-game-addiction/var/data/data_with_viciante_keywords.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -232,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
