--- a/src/notebooks/step_02_processing_data.ipynb
+++ b/src/notebooks/step_02_processing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,87 +20,77 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14000 entries, 0 to 13999\n",
+      "RangeIndex: 28000 entries, 0 to 27999\n",
       "Data columns (total 11 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
-      " 0   Unnamed: 0            14000 non-null  int64  \n",
-      " 1   Unnamed: 0.1          14000 non-null  int64  \n",
-      " 2   userName              14000 non-null  object \n",
-      " 3   userImage             14000 non-null  object \n",
-      " 4   content               14000 non-null  object \n",
-      " 5   score                 14000 non-null  int64  \n",
-      " 6   thumbsUpCount         14000 non-null  int64  \n",
-      " 7   reviewCreatedVersion  13002 non-null  object \n",
-      " 8   at                    14000 non-null  object \n",
-      " 9   file_origin           14000 non-null  object \n",
+      " 0   Unnamed: 0            28000 non-null  int64  \n",
+      " 1   Unnamed: 0.1          28000 non-null  int64  \n",
+      " 2   userName              28000 non-null  object \n",
+      " 3   userImage             28000 non-null  object \n",
+      " 4   content               27996 non-null  object \n",
+      " 5   score                 28000 non-null  int64  \n",
+      " 6   thumbsUpCount         28000 non-null  int64  \n",
+      " 7   reviewCreatedVersion  25118 non-null  object \n",
+      " 8   at                    28000 non-null  object \n",
+      " 9   file_origin           28000 non-null  object \n",
       " 10  app_id                0 non-null      float64\n",
       "dtypes: float64(1), int64(4), object(6)\n",
-      "memory usage: 1.2+ MB\n"
+      "memory usage: 2.3+ MB\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('/home/henriquegomide/Downloads/most_relevant_comments.csv')\n",
+    "df = pd.read_csv('/home/henriquegomide/Downloads/most_relevant_comments.csv', index_col=None)\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0        o jogo está ficando cada vez mais mercenário, ...\n",
-       "1        a cada atualização (mensal), o jogo fica mais ...\n",
-       "2        não são dignos de ganhar nem 1 estrela, jogo d...\n",
-       "3        os desenvolvedores não jogam o jogo, não ouvem...\n",
-       "4        tudo agora nesse jogo e monetizar , tava muito...\n",
-       "                               ...                        \n",
-       "13995    o jogo é muito bom , mais eu acho que poderia ...\n",
-       "13996    odiei esse jogo é muito ruim o dinheiro que vo...\n",
-       "13997    é bom sim , só que , tem vezes que não pega a ...\n",
-       "13998    muito bom . precisa de bastante concentração. ...\n",
-       "13999                   eu do um toque no celular e da ads\n",
-       "Name: content_p, Length: 14000, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'apply'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e177f504e0ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Convert to lowercase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#df['content_p'] = df['content'].apply(lambda x: \" \".join(x.lower() for x in x.split()))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'content'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\" \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'apply'"
+     ]
     }
    ],
    "source": [
     "# Convert to lowercase\n",
-    "df['content_p'] = df['content'].apply(lambda x: \" \".join(x.lower() for x in x.split()))\n",
-    "df['content_p']"
+    "#df['content_p'] = df['content'].apply(lambda x: \" \".join(x.lower() for x in x.split()))\n",
+    "df['content_p'] = df['content'].apply(lambda x: \" \".join(x.lower() for x in x.split()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        o jogo está ficando cada vez mais mercenário a...\n",
-       "1        a cada atualização mensal o jogo fica mais p2w...\n",
-       "2        não são dignos de ganhar nem 1 estrela jogo de...\n",
-       "3        os desenvolvedores não jogam o jogo não ouvem ...\n",
-       "4        tudo agora nesse jogo e monetizar  tava muito ...\n",
+       "0        Devs não ligam pros seus jogadores Praticas e ...\n",
+       "1        Melhor jogo ligado a marvel Atualiza muito ráp...\n",
+       "2        O jogo precisa de melhorias urgentes Acompanho...\n",
+       "3        A graça do jogo é vc jogar e adquirir as recom...\n",
+       "4        Por que a batalha temporal tá com uma injustiç...\n",
        "                               ...                        \n",
-       "13995    o jogo é muito bom  mais eu acho que poderia t...\n",
-       "13996    odiei esse jogo é muito ruim o dinheiro que vo...\n",
-       "13997    é bom sim  só que  tem vezes que não pega a jo...\n",
-       "13998    muito bom  precisa de bastante concentração aj...\n",
-       "13999                   eu do um toque no celular e da ads\n",
-       "Name: content, Length: 14000, dtype: object"
+       "27995    Caras esse sim e um bom jogo eu jogando esse f...\n",
+       "27996    Este jogo me deixou feliz pq eu zerei então oq...\n",
+       "27997    Já passei de todas as frases muito legal recom...\n",
+       "27998    Musica exelente graficos simples mas fixes jog...\n",
+       "27999    Acompanho esse jogo desde o inicio ja zerei to...\n",
+       "Name: content, Length: 28000, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
